--- a/resources/css/sidebar-filtros.css
+++ b/resources/css/sidebar-filtros.css
@@ -1,13 +1,16 @@
 /* public/css/sidebar-filtros.css */
 
 .container-sidebar {
-    background-color: #f8f9fa;
-    border: 1px solid #dee2e6;
-    border-radius: 8px;
+    background-color: #fff;
     padding: 20px;
     width: 280px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
+    position: absolute;
+    right: 0;
+    height: 100%;
+    top: 0;
+    /* display: none; */
 }
 
 .container-sidebar h3 {
